@@ -33,6 +33,12 @@ HOW TO UPDATE?
  VERSION 1.69 (In Progress)
 -----------------------------------------------------------------------
 
+Other Changes:
+
+- InputInt, InputFloat, InputScalar: Fix to keep the label of the +/- buttons centered when
+  style.FramePadding.x is abnormally larger than style.FramePadding.y. Since the buttons are
+  meant to be square (to align with e.g. color button) we always use FramePadding.y. (#2367)
+
 
 -----------------------------------------------------------------------
  VERSION 1.68 (Released 2019-02-19)
